--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h2 id="hometext" class="font-weight-bold">Nadya's first web site on django3 </h2>
+    <h2 id="hometext" class="font-weight-bold">Nadya's first web site on django3 :) </h2>
   </div>
 </div>
 
